# pinecone-demo

./: README.md  pyproject.toml
pinecone_demo/: docs_retrieval.py  docs_retrieval_langchain.py  load_datasets.py
