[tool.poetry]
name = "pinecone-demo"
version = "0.1.0"
description = ""
authors = ["Nir Gazit <nir.gzt@gmail.com>"]
readme = "README.md"
packages = [{include = "pinecone_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
pinecone-client = {extras = ["grpc"], version = "^2.2.4"}
pinecone-datasets = "^0.6.2"
langchain = "^0.0.322"
tiktoken = "^0.5.1"
traceloop-sdk = "^0.1.6"
sentry-sdk = {extras = ["opentelemetry"], version = "^1.33.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
